--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">ViewFood</string>
+    <string name="text_placeholder">Translated text and/or translated image will be shown here.</string>
+    <string name="take_photo">Take Photo</string>
+    <string name="translate">Translate</string>
 </resources>
