--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="text_placeholder">Translated text and/or translated image will be shown here.</string>
     <string name="take_photo">Take Photo</string>
     <string name="translate">Translate</string>
+    <string name="language_index">language_index</string>
 </resources>
