--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">ViewFood</string>
-    <string name="text_placeholder">Translated text and/or translated image will be shown here.</string>
+    <string name="translation_text_placeholder">Translated text will be shown here.</string>
+    <string name="translation_photo_placeholder">Translated photo will be shown here.</string>
     <string name="take_photo">Take Photo</string>
     <string name="translate">Translate</string>
     <string name="language_index">language_index</string>
