--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">ViewFood</string>
+    <string name="user_photo_text_placeholder">Take a photo and it will show here!</string>
     <string name="translation_text_placeholder">Translated text will be shown here.</string>
     <string name="translation_photo_placeholder">Translated photo will be shown here.</string>
     <string name="take_photo">Take Photo</string>
